<resources>
    <string name="app_name">equipoCuatro</string>
    <string name="title">pico botella</string>
    <string name="retos">Retos</string>
    <string name="agregar_reto">Agregar reto</string>
    <string name="escriba_el_reto">Escriba el reto</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="botella">Botella</string>
    <string name="presioname">Presióname</string>
    <string name="plantilla_reto">Realiza un RecyclerView que liste una api de Pokemones</string>
    <string name="cerrar">Cerrar</string>
    <string name="pokemon_aleatorio">Pokémon aleatorio</string>
    <string name="sin_retos_disponibles">No hay retos guardados. Agrega retos desde el menú para jugar.</string>
    <string name="Titulo_Instrucciones">Reglas del Juego</string>
    <string name="_3">3</string>
    <string name="editar_reto">Editar reto</string>
    <string name="Titulo_Eliminar">¿Desea eliminar el siguiente reto?</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarse">Registrarse</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>
